h5+与百度地图

--- a/w7_Hybrid/myhybrid/view/camera.html
+++ b/w7_Hybrid/myhybrid/view/camera.html
@@ -67,6 +67,8 @@
 						let realPath = plus.io.convertLocalFileSystemURL( path );
 						console.log(path,realPath);
 						player.src = realPath;
+						
+						player.play()
 					},{
 						// 配置参数
 						resolution:cmr.supportedImageResolutions[7]
